<resources>
    <string name="app_name">todoist</string>
    <string name="Tasks_Header">Tasks</string>
    <string name="decription">TODO</string>
    <string name="edit_task_hint">Add your New Task</string>
    <string name="Save_button">Save</string>
    <string name="confirmation">Are you sure you want to delete this Task?</string>
    <string name="descript">MainImage</string>
    <string name="app_name1">Count Down Timer</string>
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes…</string>
    <string name="Heal">Heal</string>
    <string name="Cast">HealCast</string>
    <string name="current_song">Select a Genre</string>
    <string name="playlist">Artist</string>
    <string name="playtext">420</string>
    <string name="downloadtext">250</string>
    <string name="favtext">    20</string>
    <string name="sharetext">550</string>
    <string name="defaulttext">70</string>
    <string name="nexttext">2:42</string>
    <string name="currenttime">2:42</string>
    <string name="hint_minute1">hint_minute</string>
    <string name="_25">25</string>
    <string name="_00_25_00">00:25:00</string>
</resources>