<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <ProgressBar
        android:id="@+id/progressBarCircle"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_centerInParent="true"
        android:background="@drawable/drawable_circle_dark_blue"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/drawable_circle_yellow"
        android:rotation="-90" />

    <EditText
        android:id="@+id/editTextMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewTime"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/hint_minute1"
        android:inputType="number"
        android:maxLength="25"
        android:maxLines="1"
        android:maxEms="2"
        android:text="@string/_25"
        android:textColor="@color/colorAccent1"
        app:backgroundTint="@color/theme" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/_00_25_00"
        android:textColor="@color/colorAccent1"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imageViewReset"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textViewTime"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_reset"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageViewStartStop"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/progressBarCircle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_stop" />

</RelativeLayout>