<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation = "vertical"
    android:background="@color/white">

    <!-- Rounded Image   -->
    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:id="@+id/imageView1"
        android:src="@drawable/podcast"
        android:scaleType="fitCenter"
        app:riv_corner_radius_bottom_right="105dp"
        app:riv_corner_radius_bottom_left="105dp"
        app:riv_mutate_background="true"
        />

    <!-- Song and Artist name   -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_song"
            android:textColor="@color/fontDark1"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:textSize="34sp"
            />
        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            android:textColor="@color/fontDark1"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            />
    </LinearLayout>

    <!-- Music Player Controller    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:background="@color/lightgray1"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:id="@+id/playBtn"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:background="@mipmap/ic_stop">
        </ImageButton>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currenttime"
            android:textColor="@color/fontDark1"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center"
            android:textSize="14sp"/>
    </LinearLayout>

    <!-- Division    -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkgrey1"/>

    <!-- Logout    -->
    <ImageButton
        android:id="@+id/Logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:background="@mipmap/logout"
        android:layout_marginLeft="21dp" />


</LinearLayout>